@@ -1,6 +1,7 @@
 * Replaced ALSA '-m' flag with a new '--buffer' in samples
 * Revised ALSA buffer handling to improve latencies
 * Renamed '-r' flag to '--rate'
+* Restrict ALSA sample rates to those implemented in hardware
 
 v1.8 (2021-08-18)
 -----------------
